# ansible-collections-vooon-config

./: .bumpversion.cfg  .gitlab-ci.yml  AGENTS.md  CHANGELOG.rst  README.md  galaxy.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs-lint.yml  release.yml
changelogs/: changelog.yaml
changelogs/fragments/: ansible-2.20.yml  config-template-modernize.yml  drop-ansible-2.17.yml  jsonnet.yml  port.yml  renaming.yml  systemd-tmpfiles-override-fixes.yml  systemd_sysusers-fixes.yml  uv.yml
plugins/action/: config_template.py  jsonnet.py
plugins/filter/: add_port.yml  argsenvfmt.py  argsenvfmt.yml  commentif.py  commentif.yml  dur2sec.yml  duration_go.py  nested_dict2items.py  nested_dict2items.yml  oncalendar.yml  oncalendar_dur.py  oncalendar_dur.yml  port.py  port.yml  sec2dur.yml  url_replace.yml  urlreplace.py  whitespacefix.py  whitespacefix.yml
plugins/modules/: config_template.py  jsonnet.py  systemd_override.py  systemd_sysusers.py  systemd_tmpfiles.py
plugins/test/: enabled.py  enabled.yml
tests/: __init__.py  conftest.py
tests/integration/targets/config_template/tasks/: main.yml
tests/integration/targets/config_template/templates/: list.json.j2
tests/integration/targets/systemd_override/tasks/: main.yml
tests/integration/targets/systemd_sysusers/tasks/: main.yml
tests/integration/targets/systemd_tmpfiles/tasks/: main.yml
tests/sanity/: ignore-2.20.txt  requirements.txt
tests/unit/: test_argsenvfmt.py  test_commentif.py  test_config_template.py  test_duration_go.py  test_enabled.py  test_jsonnet.py  test_nested_dict2items.py  test_oncalendar_dur.py  test_port.py  test_urlreplace.py  test_whitespacefix.py
