[project]
name = "ansible-collections-fishos-config"
version = "2.5.0"
description = "A collection with modified config_template and other helpers we commonly use."
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: POSIX :: Linux :: AlmaLinux",
    # "Operating System :: POSIX :: Linux :: Debian",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "ruamel.yaml",
    "tomlkit",
    "iniparse >= 0.5.1", # we need line_number which is post 0.5
    "hjson >=3,<4",
    "durationpy",
    "oncalendar >=1,<2",
    "jsonpatch >=1,<2",
    "jsonnet",
]

[project.optional-dependencies]
dev = [
    "ansible >=11,<12",
    "ansible-lint",
    "antsibull-changelog",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "lxml",
    "yamllint",
    "types-PyYAML",
    "ansible-lint-junit",
    "yamllint-junit",
]
docs = [
    "mkdocs",
    "mkdocs-ansible",
    "mkdocstrings-python",
    "sphinx",
    "antsibull-docs",
    "ansible-pygments",
    "sphinx-ansible-theme",
]

[tool.uv.sources]
iniparse = { git = "https://github.com/candlepin/python-iniparse.git" }

[[project.authors]]
name = "Sardina Systems"
email = "info@sardinasystems.com"

[project.urls]
Homepage = "https://sardinasystems.com"

[tool.hatch.build.targets.wheel.force-include]
"./" = "ansible_collections/fishos/config"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
